--- a/src/static/css/chart.css
+++ b/src/static/css/chart.css
@@ -1,32 +1,35 @@
-.container__aside {
+.container__aside,
+.container__aside__country {
   color: var(--white-text-color);
   font-size: 0.7em;
   font-weight: 200;
   letter-spacing: 1px;
-  width: 76vw;
   overflow-x: hidden;
   overflow-y: scroll;
   height: 92vh;
 }
+.container__aside {
+  width: 76vw;
+  min-width: 540px;
+}
+.container__aside__country {
+  width: 46vw;
+}
 
-.container__aside::-webkit-scrollbar{
-    width: 10px;
+.container__aside__country::-webkit-scrollbar,
+.container__aside::-webkit-scrollbar {
+  width: 10px;
 }
 section {
   margin-bottom: 40px;
 }
 
-h3 {
+figure h3 {
   font-size: 1.2em;
   margin-bottom: 29px;
   border-bottom: 1px solid var(--text-secondary-color);
   padding-bottom: 15px;
   font-weight: 200;
-}
-
-.linehr {
-  border-color: var(--white-text-color);
-  margin-bottom: 10px;
 }
 
 figure {
@@ -45,6 +48,11 @@ canvas {
 #chart4 {
   max-height: 200px;
   min-width: 200px;
+}
+
+#chart5,
+#chart6 {
+  max-height: 300px;
 }
 
 /* section {
@@ -66,8 +74,9 @@ canvas {
 }
 
 .kpi {
-    margin-top: 10px;
-    display: grid;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
 .title__kpi {
@@ -103,36 +112,36 @@ canvas {
 }
 
 .carrousel .bodycarrousel {
-    width: 200%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    transition: all 0.7s ease;
-    transform: translateX(0%);
-  }
-  
-  .carrousel figure {
-    width: calc( 100% / 2 );
-  }
-  
-  .carrousel .points {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .carrousel .punto {
-    width: 1.2em;
-    height: 1.2em;
-    margin: 1em 1em 0;
-    transition: all 0.4s ease;
-    border: 2px solid rgb(145, 145, 145);
-    border-radius: 20%;
-    cursor: pointer;
-  }
-  
-  .carrousel .punto.activo {
-    background-color: rgb(102, 102, 102);
-  }
+  width: 200%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  transition: all 0.7s ease;
+  transform: translateX(0%);
+}
+
+.carrousel figure {
+  width: calc(100% / 2);
+}
+
+.carrousel .points {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.carrousel .punto {
+  width: 1.2em;
+  height: 1.2em;
+  margin: 1em 1em 0;
+  transition: all 0.4s ease;
+  border: 2px solid rgb(145, 145, 145);
+  border-radius: 20%;
+  cursor: pointer;
+}
+
+.carrousel .punto.activo {
+  background-color: rgb(102, 102, 102);
+}
