--- a/src/static/css/chart.css
+++ b/src/static/css/chart.css
@@ -90,7 +90,7 @@ canvas {
 }
 
 .container__aside__chart .container__chart {
-  width: 100%;
+  width: 100% !important;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
@@ -144,4 +144,10 @@ canvas {
 
 .carrousel .punto.activo {
   background-color: rgb(102, 102, 102);
+}
+
+.number_kpi{
+  font-size: 30px;
+  font-size: 500px;
+  color: var(--text-secondary-color)
 }
