--- a/src/templates/partials/base.html
+++ b/src/templates/partials/base.html
@@ -20,7 +20,7 @@
     <nav class="stroke">
       <ul>
         <li id="team__submenu"><a href="#">Team</a></li>
-        <li><a href="#">Source</a></li>
+        <li><a href="https://eroslibidus-streamdic-streamlit-app-lja7zf.streamlitapp.com/" target="_blank">Consultas Gui</a></li>
       </ul>
     </nav>
   </header>
