--- a/src/templates/partials/js.html
+++ b/src/templates/partials/js.html
@@ -9,6 +9,6 @@ crossorigin=""></script>
   crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script src="{% static 'js/index.js' %}"></script>
-<script src="{% static 'datajson/world.js' %}"></script>
+<script src="{% static 'datajson/consumo.js' %}"></script>
 <script src="{% static 'js/map.js' %}"></script> 
 <script src="{% static 'js/chart.js' %}"></script> 
