--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,14 +1,12 @@
-{% extends 'partials/base.html' %} {% load static %} 
+{% extends 'partials/base.html' %} 
+{% load static %} 
 
 {% block contentcountry %}
 
 <div id="country__close" style="width: 50px;">
-  <a href="#" style="margin-left: 10px;width: 100%;height: 200px;"
-  ><i
-    class="fa-solid fa-angles-right fa-2x"
-    style="color: aliceblue"
-  ></i
-></a>
+  <a href="#" style="margin-left: 10px;width: 100%;height: 200px;">
+    <i class="fa-solid fa-angles-right fa-2x" style="color: aliceblue"></i>
+  </a>
 </div>
 
 <div class="container__aside__country">
@@ -53,13 +51,9 @@
     </section>
   </div>
 </div>
-
-
-
-
-
-
 {% endblock contentcountry %}
+
+
 {% block contentworld %}
 <div id="click__right__close" style="width: 50px;">
   <a href="#" style="margin-left: 10px;width: 100%;height: 200px;"
@@ -95,17 +89,16 @@
     <section class="container__aside__chart">
       <figure>
         <h3>Predicción al 2029</h3>
-
       </figure>
     </section>
     <section class="container__aside__chart">
-      <figure>
-
+      <figure class="chart">
+        <canvas id="chart2"></canvas>
       </figure>
     </section>
     <section class="container__aside__chart">
-      <figure>
-
+      <figure class="chart">
+        <canvas id="chart1"></canvas>
       </figure>
     </section>
   
@@ -128,13 +121,17 @@
     </section>
   </div>
 </div>
-{% endblock contentworld %} {% block contentfilters %}
+{% endblock contentworld %} 
+
+
+{% block contentfilters %}
+
 <div id="click__left__close">
   <button>cerrar</button>
 </div>
 <div>
   <input type="text" onchange="cambio(this.value)">
   <input type="button" value="Button">
+</div>
 
 {% endblock contentfilters %}
-</div>
