--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -92,22 +92,19 @@
         <canvas id="chart7"></canvas>
       </figure>
     </section>
-      <section class="container__aside__chart">
-        <div class="container__chart">
-          <div class="chart"> 
-            <figure>
-              <h3>Top 10 con mas emisiones</h3>
-              <canvas id="chart2"></canvas>
-            </figure>
-          </div>
-          <div class="chart">
-            <figure>
-              <h3>Emisiones por continente</h3>
-              <canvas id="chart1"></canvas>
-            </figure>
-          </div>
-        </div>
-      </section>
+      <section class="cols-2">
+
+        <figure>
+          <h3>Top 10 paises con mas emisiones</h3>
+            <canvas id="chart2"></canvas>
+        </figure>
+
+        <figure>
+          <h3>Emisiones por continente</h3>
+            <canvas id="chart1"></canvas>
+        </figure>
+
+    </section>
 
 
 
