--- a/src/templates/partials/base.html
+++ b/src/templates/partials/base.html
@@ -37,16 +37,6 @@
     </div>
     <div class="aside__right">
       <div class="aside__right__main">
-        <!-- <div class="header__aside__movil">
-          <div class="title">
-            <img src="static/img/logo_imagen.png" alt="">
-            <img src="static/img/logo_letra.png" alt="">
-          </div>
-          <div class="header__main">
-            <p >Team</p>
-            <p >Open Source</p>
-          </div>
-        </div> -->
             {% block contentworld %}{% endblock contentworld %}
       </div>
     </div>
@@ -106,6 +96,9 @@
           <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
         </div>
       </div>
+    </div>
+    <div id="obturador">
+      <img width="100%" height="100%"  src="static/img/FONDO-NEGRO.png" alt="">
     </div>
   </main>
 
