--- a/src/templates/partials/js.html
+++ b/src/templates/partials/js.html
@@ -6,5 +6,12 @@ crossorigin=""></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script src="{% static 'js/index.js' %}"></script>
 <script src="{% static 'datajson/consumo.js' %}"></script>
+<script src="{% static 'datajson/world.js' %}"></script>
+<script src="{% static 'datajson/emisiones.js' %}"></script>
+<script src="{% static 'datajson/huellamundial.js' %}"></script>
+<script src="{% static 'datajson/gases.js' %}"></script>
+<script src="{% static 'datajson/prediccion.js' %}"></script>
+<script src="{% static 'datajson/temperatura.js' %}"></script>
+<script src="{% static 'datajson/huellapais.js' %}"></script>
 <script src="{% static 'js/map.js' %}"></script> 
 <script src="{% static 'js/chart.js' %}"></script> 
