Change in structure de (#15)
the sale of filters by a timeline was eliminated and data on continents and top countries were added

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -130,7 +130,7 @@
 
 
 {% block contentfilters %}
-
+<!-- 
 <div id="click__left__close">
   <button>cerrar</button>
 </div>
@@ -140,6 +140,6 @@
     <input style="margin-top: 3px" type="text">
     <input style="margin-top: 10px" type="button" value="Button">
   </div>
-</div>
+</div> -->
 
 {% endblock contentfilters %}
