--- a/src/templates/partials/base.html
+++ b/src/templates/partials/base.html
@@ -42,7 +42,35 @@
     </div>
     
     <div class="aside">
-      <div id="click__left__open" class="click__left__open">FILTERS</div>
+      <div class="timeline">
+        <div class="linetop"></div>
+        <div id="items__timeline">
+            <button value="2000">2000</button>
+            <button value="2001">2001</button>
+            <button value="2002">2022</button>
+            <button value="2003">2003</button>
+            <button value="2004">2004</button>
+            <button value="2005">2005</button>
+            <button value="2006">2006</button>
+            <button value="2007">2007</button>
+            <button value="2008">2008</button>
+            <button value="2009">2009</button>
+            <button value="2010">2010</button>
+            <button value="2011">2011</button>
+            <button value="2012">2012</button>
+            <button value="2013">2013</button>
+            <button value="2014">2014</button>
+            <button value="2015">2015</button>
+            <button value="2016">2016</button>
+            <button value="2017">2017</button>
+            <button value="2018">2018</button>
+            <button value="2019">2019</button>
+            <button value="2020">2020</button>
+            <button value="2021">2021</button>
+            <button >2022</button>
+        </div>
+    </div>
+     
     </div>
       
       <div class="aside__left">
