--- a/src/templates/partials/js.html
+++ b/src/templates/partials/js.html
@@ -3,8 +3,7 @@
 <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
 integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
 crossorigin=""></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-<script src="{% static 'js/index.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 <script src="{% static 'datajson/consumo.js' %}"></script>
 <script src="{% static 'datajson/world.js' %}"></script>
 <script src="{% static 'datajson/emisiones.js' %}"></script>
@@ -13,5 +12,9 @@ crossorigin=""></script>
 <script src="{% static 'datajson/prediccion.js' %}"></script>
 <script src="{% static 'datajson/temperatura.js' %}"></script>
 <script src="{% static 'datajson/huellapais.js' %}"></script>
-<script src="{% static 'js/map.js' %}"></script> 
-<script src="{% static 'js/chart.js' %}"></script> 
+<script src="{% static 'datajson/consumo.js' %}"></script>
+<script src="{% static 'datajson/produccion.js' %}"></script>
+<script src="{% static 'datajson/emisionesContinente.js' %}"></script>
+<script src="{% static 'datajson/top10.js' %}"></script>
+<script src="{% static 'js/index.js' %}"></script>
+<script src="{% static 'js/map.js' %}"></script>
