--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,18 +1,45 @@
 /* --------------------- main ---------------------------- */
-.header__aside__movil{
-    display: none;
-}
 
 .aside {
     position: fixed;
-    height: 92vh;
-    width: 120px;
-    color: var(--white-text-color);
-    transform: translate(0, -84vh);
+    height: 380px;
+    width: 80px;
+    transform: translate(20px, -74vh);
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
+
+/* -----------------timeline -------------------- */
+.aside .timeline{
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  overflow-y: scroll;
+}
+.aside .timeline::-webkit-scrollbar{
+  -webkit-appearance: none;
+}
+.linetop{
+  border-left: 2px solid var(--default-bg-color);
+  height: 515px;
+  margin-left: 12px;
+  margin-right: 5px;
+  /* border: 2px solid red; */
+}
+.items__timeline{
+  display: flex;
+  flex-direction: column;    
+  gap: 5px;        
+}
+.items__timeline button{
+  background-color: transparent !important;
+  border: transparent;
+  cursor: pointer;
+}
+
+
 .click__left__open {
     margin-top: 80px;
     width: 80px;
@@ -102,11 +129,6 @@
     width: 22vw;
     transform: translate(-22vw, -84vh);
 }
-
-.move__left {
-    transform: translate(0, -84vh);
-}
-
 /* sub-menu */
 .submenu{
     position: absolute;
