--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -17,9 +17,10 @@
   flex-direction: row;
   /* align-items: center; */
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 .aside .timeline::-webkit-scrollbar{
-  -webkit-appearance: none;
+  width: 1px;
 }
 .linetop{
   border-left: 2px solid var(--default-bg-color);
@@ -31,12 +32,16 @@
 .items__timeline{
   display: flex;
   flex-direction: column;    
-  gap: 5px;        
+  gap: 5px;    
 }
-.items__timeline button{
-  background-color: transparent !important;
-  border: transparent;
+.timeline__buttons{
+  font-size: 19px;
+  font-weight: 500;
   cursor: pointer;
+}
+.timeline__buttons:hover{
+  color: var(--hover-text-color);
+  font-weight: 600;
 }
 
 
@@ -66,8 +71,7 @@
 }
 
 .right__country,
-.aside__right,
-.aside__left {
+.aside__right{
     position: fixed;
     height: 92vh;
     transition: 400ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
@@ -98,21 +102,21 @@
 
 .aside__right {  
     width: 79vw;
-    transform: translate(100vw, -84vh);
+    transform: translate(100vw, -86vh);
 
 }
 
 .move__right {
-    transform: translate(21vw, -84vh);
+    transform: translate(21vw, -86vh);
 }
  
 .right__country{ 
   width: 50vw;
-  transform: translate(100vw, -84vh);
+  transform: translate(100vw, -86vh);
 }
 
 .move__country {
-  transform: translate(51vw, -84vh);
+  transform: translate(51vw, -86vh);
 } 
 
 
@@ -124,11 +128,6 @@
     background: linear-gradient(to top,#000508, #07374D, #000508);
 }
 
-.aside__left {
-    background-color: var(--default-bg-color);
-    width: 22vw;
-    transform: translate(-22vw, -84vh);
-}
 /* sub-menu */
 .submenu{
     position: absolute;
@@ -139,7 +138,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    transform: translateY(-475px);
+    transform: translateY(-575px);
     transition: 400ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
   }
   
@@ -163,7 +162,7 @@
     }
   
     .item__submenu{
-      padding: 10px 0;
+      padding: 4px 12px 0;
     }
     .item__submenu i{
       padding: 0 10px;
@@ -179,8 +178,8 @@
     #obturador{
       display: none;
         position: absolute;
-        width: 200vw;
+        width: 100vw;
         height: 200vh;
         z-index: 1000;
-        transform: translateY(-685px);
+        transform: translateY(-785px);
       }
