Change customize the map (#15)

--- a/src/templates/partials/base.html
+++ b/src/templates/partials/base.html
@@ -45,88 +45,88 @@
       <div class="timeline">
         <div class="linetop"></div>
         <div id="items__timeline">
-            <button value="2000">2000</button>
-            <button value="2001">2001</button>
-            <button value="2002">2022</button>
-            <button value="2003">2003</button>
-            <button value="2004">2004</button>
-            <button value="2005">2005</button>
-            <button value="2006">2006</button>
-            <button value="2007">2007</button>
-            <button value="2008">2008</button>
-            <button value="2009">2009</button>
-            <button value="2010">2010</button>
-            <button value="2011">2011</button>
-            <button value="2012">2012</button>
-            <button value="2013">2013</button>
-            <button value="2014">2014</button>
-            <button value="2015">2015</button>
-            <button value="2016">2016</button>
-            <button value="2017">2017</button>
-            <button value="2018">2018</button>
-            <button value="2019">2019</button>
-            <button value="2020">2020</button>
-            <button value="2021">2021</button>
-            <button >2022</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2000">2000</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2001">2001</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2002">2022</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2003">2003</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2004">2004</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2005">2005</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2006">2006</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2007">2007</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2008">2008</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2009">2009</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2010">2010</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2011">2011</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2012">2012</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2013">2013</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2014">2014</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2015">2015</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2016">2016</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2017">2017</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2018">2018</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2019">2019</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2020">2020</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" value="2021">2021</button>
+            <button class="timeline__buttons" style="background-color: transparent; border: transparent" >2022</button>
         </div>
     </div>
+  </div>
+
      
-    </div>
-      
-      <div class="aside__left">
-      
-          {% block contentfilters %}{% endblock contentfilters %}
-      </div>
-    </div>
     <div class="submenu">
       <div class="card__submenu">
-        <img width="150px" src="https://media-exp1.licdn.com/dms/image/C5603AQGuEb1L6VGJ3w/profile-displayphoto-shrink_200_200/0/1620702778065?e=1668038400&v=beta&t=u_aDCMd0gfaoxQV439yi7LG5B2qjAs1GwXxjV9AspZI" alt="">
-        <h3><a href="#">Alex Rodriguez</a></h3>
+        <img width="150px" src="static/img/alex.jpeg" alt="">
+        <h3><a href="https://alexrodriguezvillavicencio.github.io/inicio/" target="_blank">Alex Rodriguez</a></h3>
+        <p style="color: #fff; font-size:12px">Data Engineer | Backend</p>
         <div class="item__submenu">
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-square-github"></i></a>
+          <a href="https://www.linkedin.com/in/alexrodriguezvillavicencio/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/AlexRodriguezVillavicencio" target="_blank"><i class="fa-brands fa-square-github"></i></a>
           <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
         </div>
       </div>
       <div class="card__submenu">
-        <img width="150px" src="https://media-exp1.licdn.com/dms/image/C4E03AQFewS1wxZu6UA/profile-displayphoto-shrink_200_200/0/1588967774396?e=1668038400&v=beta&t=0-AgEN6h5quVGU6DPw24dEgR-4tpj-uxphD3i9JDgqg" alt="">
+        <img width="150px" src="static/img/cristina.jpg" alt="">
         <h3><a href="#">Cristina Zamorano</a></h3>
+        <p style="color: #fff; font-size:12px">Data Science</p>
         <div class="item__submenu">
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-square-github"></i></a>
+          <a href="https://www.linkedin.com/in/cristinazamoranods/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/criszam99" target="_blank"><i class="fa-brands fa-square-github"></i></a>
           <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
         </div>
       </div>
       <div class="card__submenu">
-        <img width="150px" src="https://media-exp1.licdn.com/dms/image/C4E03AQFDu5YZfBh73w/profile-displayphoto-shrink_200_200/0/1516504639202?e=1668038400&v=beta&t=NJxCtHyJ_AY50DT1uWOD4ULHnZ4wufiugObMb_lRNn0" alt="">
+        <img width="150px" src="static/img/helton.jpeg" alt="">
         <h3><a href="#">Helton Lirion</a></h3>
+        <p style="color: #fff; font-size:12px">Data Engineer | Machine Learning</p>
         <div class="item__submenu">
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-square-github"></i></a>
+          <a href="https://www.linkedin.com/in/jhlirion/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/Jhlirion" target="_blank"><i class="fa-brands fa-square-github"></i></a>
           <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
         </div>
       </div>
       <div class="card__submenu">
-        <img width="150px" src="https://media-exp1.licdn.com/dms/image/C4D03AQHjVFByF04Gog/profile-displayphoto-shrink_200_200/0/1631129368621?e=1668038400&v=beta&t=QBSG7XC5rebPhXmx4xuRjCGHmJGrxmQfd3YQjLmlqBs" alt="">
+        <img width="150px" src="static/img/agustin.jpg" alt="">
         <h3><a href="#">Agustín Montero</a></h3>
+        <p style="color: #fff; font-size:12px">Data Science</p>
         <div class="item__submenu">
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-square-github"></i></a>
+          <a href="https://www.linkedin.com/in/guillermo-agustin-montero-93910b216/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/agusm95"><i class="fa-brands fa-square-github" target="_blank"></i></a>
           <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
         </div>
       </div>
       <div class="card__submenu">
-        <img width="150px" src="https://media-exp1.licdn.com/dms/image/D5635AQGXW0U7XhrOLA/profile-framedphoto-shrink_200_200/0/1660002666757?e=1663113600&v=beta&t=_LHwEvBMefmjHp0DM5gifoDErL-tMBglex7dk4xR1SU" alt="">
+        <img width="150px" src="static/img/geronimo.jpeg" alt="">
         <h3><a href="#">Geronimo Giggi</a></h3>
+        <p style="color: #fff; font-size:12px">Data Engineer | Cloud</p>
         <div class="item__submenu">
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#"><i class="fa-brands fa-square-github"></i></a>
+          <a href="https://www.linkedin.com/in/geronimo-giggi-hippener-37a397238/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/ErosLibidus" target="_blank"><i class="fa-brands fa-square-github"></i></a>
           <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
         </div>
       </div>
     </div>
     <div id="obturador">
-      <img width="100%" height="100%"  src="static/img/FONDO-NEGRO.png" alt="">
+      <img width="100%" height="100%"  src="static/img/fondomovil.jpg" alt="">
     </div>
   </main>
 
