--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,15 +37,15 @@
     <!-- <h2 class="loading">Esperando respuesta de la API...</h2> -->
     <section class="container__aside__chart">
       <figure>
-        <p>Gráfico de barras</p>
-        <h3>Emisiones por tipo de energía</h3>
+        <p>por tipo de energía</p>
+        <h3>Producción Eléctrica</h3>
         <canvas id="chart5"></canvas>
       </figure>
     </section>
     <section class="container__aside__chart">
       <figure>
-        <p>Gráfico radar</p>
-        <h3>Emisiones por tipo de energía</h3>
+        <p>por tipo de energía</p>
+        <h3>Consumo Eléctrico</h3>
         <canvas id="chart6"></canvas>
       </figure>
     </section>
@@ -127,19 +127,3 @@
   </div>
 </div>
 {% endblock contentworld %} 
-
-
-{% block contentfilters %}
-<!-- 
-<div id="click__left__close">
-  <button>cerrar</button>
-</div>
-<div style="width: 100%;height: 500px;display: flex;">
-  <div style="margin-top:50px;margin-left: 20px;">
-    <h3>Selecciona una fecha</h3>
-    <input style="margin-top: 3px" type="text">
-    <input style="margin-top: 10px" type="button" value="Button">
-  </div>
-</div> -->
-
-{% endblock contentfilters %}
