Add link api doc

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,21 +15,33 @@
     <p>Visualización de estadísticas por país</p>
     
     <div class="kpi">
-      <ul>
+      <ul style="margin-bottom: 5px">
         <li class="title__kpi">Huella de Carbono</li>
-        <li class="number__kpi" id="huellac_pais"></li>
+        <div style="display:flex">
+          <li class="number__kpi" id="huellac_pais"></li>
+          <p style="font-size: 12px; margin-left: 5px;">hg/persona</p>
+        </div>
       </ul>
-      <ul>
+      <ul style="margin-bottom: 5px">
         <li class="title__kpi">Huella ecológica</li>
-        <li class="number__kpi" id="huellae_pais"></li>
+        <div style="display:flex">
+          <li class="number__kpi" id="huellae_pais"></li>
+          <p style="font-size: 12px; margin-left: 5px;">hg/persona</p>
+        </div>
       </ul>
-      <ul>
+      <ul style="margin-bottom: 5px">
         <li class="title__kpi">Biocapacidad</li>
-        <li class="number__kpi" id="bio_pais"></li>
+        <div style="display:flex">
+          <li class="number__kpi" id="bio_pais"></li>
+          <p style="font-size: 12px; margin-left: 5px;">hg/persona</p>
+        </div>
       </ul>
-      <ul>
+      <ul style="margin-bottom: 5px">
         <li class="title__kpi">Tierra</li>
-        <li class="number__kpi" id="tierra_pais"></li>
+        <div style="display:flex">
+          <li class="number__kpi" id="tierra_pais"></li>
+          <p style="font-size: 12px; margin-left: 5px;">planetas Tierra</p>
+        </div>
       </ul>
     </div>
 
@@ -68,17 +80,26 @@
     <h1>Comparativa Global:</h1>
     <p>Visualización de estadísticas globales</p>
     <div class="kpi">
-      <ul>
+      <ul style="margin-bottom: 5px">
         <li class="title__kpi">Biocapacidad Percápita</li>
-        <li class="number__kpi" id="biocapacidad"></li>
+        <div style="display:flex">
+          <li class="number__kpi" id="biocapacidad"></li>
+          <p style="font-size: 12px; margin-left: 5px;">hg/persona</p>
+        </div>
       </ul>
-      <ul>
+      <ul style="margin-bottom: 5px">
         <li class="title__kpi">Huella ecológica global</li>
-        <li class="number__kpi" id="huella"></li>
+        <div style="display:flex">
+          <li class="number__kpi" id="huella"></li>
+          <p style="font-size: 12px; margin-left: 5px;">hg/persona</p>
+        </div>
       </ul>
-      <ul>
+      <ul style="margin-bottom: 5px">
         <li class="title__kpi">Tierra</li>
-        <li class="number__kpi" id="tierra"></li>
+        <div style="display:flex">
+          <li class="number__kpi" id="tierra"></li>
+          <p style="font-size: 12px; margin-left: 5px;">planetas Tierra</p>
+        </div>
       </ul>
     </div>
     <hr class="linehr" />
